# live-caption

./: CaptionWindow.py  README.md  README_JA.md  REAME.md  TEST_LIST_JA.md  audio.py  main.py  pyproject.toml
.github/workflows/: ci.yml
live_caption/: CaptionWindow.py  __init__.py  audio.py  cli.py  recognizer.py
scripts/: monitor_device.py
tests/: test_audio.py  test_cli.py  test_main.py  test_recognizer.py
